Fix for DOCS-173: Link text too dark in top-right banner showing latest release
Tested with openig

--- a/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
@@ -326,3 +326,7 @@ table.simplelist {
 .latest a:hover {
     color: #f58220;
 }
+
+.latest a:visited {
+    color: white;
+}
