--- a/forgerock-doc-default-branding/trunk/src/main/resources/dfo.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/dfo.css
@@ -343,3 +343,7 @@ table.simplelist {
 .latest a:hover {
     color: #f58220;
 }
+
+.latest a:visited {
+    color: white;
+}
